@@ -1,11 +1,11 @@
-# ABSTRACT: Waypoint class
-
 package WebService::OpenSky::Core::Waypoint;
-
-our $VERSION = '0.2';
+#
+# ABSTRACT: Waypoint class
 
 use Moose;
 use experimental qw(signatures);
+
+our $VERSION = '0.2';
 
 sub _get_params ($class) {
     return qw(
