@@ -1,12 +1,12 @@
-# ABSTRACT: A class representing a states response from the OpenSky Network API
-
 package WebService::OpenSky::Response::States;
 
-our $VERSION = '0.2';
+# ABSTRACT: A class representing a states response from the OpenSky Network API
 use Moose;
 use WebService::OpenSky::Core::StateVector;
 use experimental qw(signatures);
 extends 'WebService::OpenSky::Response';
+
+our $VERSION = '0.2';
 
 sub _create_response_objects ($self) {
     return [ map { WebService::OpenSky::Core::StateVector->new($_) } $self->raw_response->{states}->@* ];
